--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
 } */
 
 
+
+
+
 body {
     margin: 0;
     font-family: Futura, Helvetica, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
@@ -15,57 +18,104 @@ body {
     line-height: 1.5;
     color: #252525;
     text-align: left;
-    background-color: #fff;
+    background-color: #F3F4FA;
 }
 
-.h5, h5 {
-    font-size: 1.25rem;
-    color: white;
+/* This is cotainer for the emojis and the acount balance */
+.account-card {
+
+   background-color: white;
+   padding: 1.5rem 1rem;
+   font-size: 1.25rem;
+   line-height: 1.5;
+   border-radius: 10px;
+   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
+
+}
+.transaction-items {
+   padding: 1.5rem 4rem;
+}
+
+
+.transactions-card {
+
+
+
+
+}
+
+
+.branding  {
+
+   font-family: Futura, Helvetica, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+
+   font-weight: 400;
+   line-height: 2;
+   color: #252525;
+
 }
 
 /* This is for the main buttons */
 
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: initial;
-    border: 1px solid transparent;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+
+
+
+
+
+.receive-button {
+   color: white;
+   padding: 1rem 1rem;
+   font-size: 1.25rem;
+   line-height: 1.5;
+   border-radius: 10px;
+   font-family: Futura, Helvetica ;
+   transition: all .2s ease-in-out;
+   background-color: #252525;
+   border-color: #252525;
+   margin-left: 4rem;
+   margin-right: 4rem;
 }
 
-.btn-group-lg>.btn, .btn-lg {
-    padding: .5rem 1rem;
-    font-size: 1.25rem;
-    line-height: 1.5;
-    border-radius: 0rem;
-    font-family: Futura, Helvetica ;
+.receive-button:hover
+{
+   box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+   transform: scale(1.05);
+   background-color: #5a6268;
+    border-color: #5a6268;
 }
 
-.btn-secondary {
-    color: #252525;
-    background-color: #FFBEBC;
-    border-color: #FFBEBC;
+.whatsapp-button {
+color: #252525;
+   padding: .5rem 1rem;
+   margin-bottom: 10px;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  border-radius: 10px;
+  border-width: medium;
+   font-family: Futura, Helvetica ;
+   transition: all .2s ease-in-out;
+   background-color: #F3F4FA;
+   border-color: #252525;
+
+   }
+
+.whatsapp-button:hover
+{
+   color: #252525;
+   box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+   transform: scale(1.05);
+   background-color: #F3F4FA;
+   border-color: #252525;
 }
 
 
-.btn-secondary:hover {
-    color: #252525;
-    background-color: rgba(255,38,31,.8);
-    border-color: rgba(255,38,31,.8);
+.recover {
+ color: white;
+ padding: .5rem 1rem;
+font-size: 1.25rem;
+line-height: 1.5;
+border-radius: 10px;
 }
-
-
 
 /* This is for the language dropdown */
 
