--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,41 @@ body {
 
 body {
     margin: 0;
-    font-family: Futura, Helvetica, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    font-family:  Helvetica, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     font-size: 1rem;
-    font-weight: 400;
+
     line-height: 1.5;
     color: #252525;
     text-align: left;
     background-color: #F3F4FA;
+
+
+}
+
+.branding-container {
+
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   padding: 0rem 1rem;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+
+
+}
+
+.top-container {
+padding: 1.5rem 1rem;
+
+}
+
+.content-container {
+
+
+   padding: 1.5rem 1rem;
+   height: auto;
+
 }
 
 /* This is cotainer for the emojis and the acount balance */
@@ -29,11 +57,11 @@ body {
    font-size: 1.25rem;
    line-height: 1.5;
    border-radius: 10px;
-   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
+    box-shadow: 0px 20px 40px rgba(0,0,0,0.4);
 
 }
 .transaction-items {
-   padding: 1.5rem 4rem;
+
 }
 
 
@@ -47,31 +75,40 @@ body {
 
 .branding  {
 
-   font-family: Futura, Helvetica, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+   font-family:  Helvetica, -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 
-   font-weight: 400;
+   font-weight: 600;
    line-height: 2;
-   color: #252525;
+   color: #282829;
 
 }
 
 /* This is for the main buttons */
 
 
+.btn-secondary {
+   background: #F23C22;
+   border-color: #F23C22;
+   font-family:  Helvetica ;
+  font-weight: 600;
+}
 
-
-
+.btn-secondary:hover {
+   background: #F23C22;
+   border-color: #F23C22;
+}
 
 .receive-button {
-   color: white;
+   color: #282829;
    padding: 1rem 1rem;
    font-size: 1.25rem;
    line-height: 1.5;
    border-radius: 10px;
-   font-family: Futura, Helvetica ;
+   font-family:  Helvetica ;
+   font-weight: 600;
    transition: all .2s ease-in-out;
-   background-color: #252525;
-   border-color: #252525;
+   background-color: #F23C22;
+   border-color: #F23C22;
    margin-left: 4rem;
    margin-right: 4rem;
 }
@@ -84,6 +121,20 @@ body {
     border-color: #5a6268;
 }
 
+.transaction-button {
+   color: #F23C22;
+   background-color: #F3F4FA;
+   border-color: #F3F4FA;
+   margin: 10px;
+
+}
+.transaction-button:hover {
+   color: #F23C22;
+   background-color: #F3F4FA;
+   border-color: #F3F4FA;
+   margin: 10px;
+}
+
 .whatsapp-button {
 color: #252525;
    padding: .5rem 1rem;
@@ -92,7 +143,8 @@ color: #252525;
   line-height: 1.5;
   border-radius: 10px;
   border-width: medium;
-   font-family: Futura, Helvetica ;
+   font-family:  Helvetica ;
+   font-weight: 600;
    transition: all .2s ease-in-out;
    background-color: #F3F4FA;
    border-color: #252525;
@@ -118,52 +170,24 @@ border-radius: 10px;
 }
 
 /* This is for the language dropdown */
-
-.btn-secondary:not(:disabled):not(.disabled).active, .btn-secondary:not(:disabled):not(.disabled):active, .show>.btn-secondary.dropdown-toggle {
-    color: #252525;
-    background-color: rgba(255,38,31,.8);
-    border-color: rgba(255,38,31,.8);
-}
-
-
-.dropdown-menu {
+.dropdown-menu  {
     position: absolute;
+    font-family:  Helvetica ;
+   font-weight: 600;
     top: 100%;
     left: 0;
     z-index: 1000;
     display: none;
-    float: left;
+    float: right;
     min-width: 10rem;
     padding: 0rem 0;
     /* margin: .125rem 0 0; */
     font-size: 1rem;
-    color: #252525;
+
     text-align: left;
     list-style: none;
-    background-color: #fff;
+    background-color: #F23C22;
     background-clip: padding-box;
     border: 0px solid rgba(255,38,31,.8);
     border-radius: 0rem;
-}
-
-.dropdown-item {
-    display: block;
-    width: 100%;
-    padding: .25rem 1.5rem;
-    clear: both;
-    font-weight: 400;
-    color: #252525;
-    text-align: inherit;
-    white-space: nowrap;
-    background-color: initial;
-    border: 0;
-}
-
-
-.btn-secondary:not(:disabled):not(.disabled).active:focus, .btn-secondary:not(:disabled):not(.disabled):active:focus, .show>.btn-secondary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(130,138,145,.0);
-}
-
-.btn-secondary.focus, .btn-secondary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(130,138,145,.0);
 }
